<resources>
    <string name="hello">Hello World!</string>
    <string name="url">http://117.248.110.15:15001/axis2/services/FrontLineWebServices</string>
    <string name="alert_sup">The Application Does Not Support This Device.</string>
    <string name="bank_name">Shri Nagari Sahkari Pat Sanstha Maryadit,Dapodi</string>
    <string name="app_name">Shri Nagari Mobile Banking</string>
    <string name="txt_but_exit">Exit</string>
    <string name="txt_but_back">Back</string>
    <string name="lbl_bank_cd">DEENDAYL</string>
    <string-array name="email_chng">
        <item>Register</item>
        <item>De-Register</item>
    </string-array>
    <string-array name="email_freq">
        <item>Monthly</item>
        <item>Quarterly</item>
        <item>Half Yearly</item>
        <item>Yearly</item>
    </string-array>
    <string name="chq_bk_req">Cheque Book Request</string>
    <string name="chq_bk_status">View Cheque Status</string>
    <string-array name="check_related">
        <item>@string/chq_bk_req</item>
        <item>@string/chq_bk_status</item>
    </string-array>
    <string name="email_hint">Please Enter Valid E-mail ID</string>
    <string name="frmtitle_add_same_bnk_bnf">Add Beneficiary</string>
    <string name="frmtitle_edit_same_bnk_bnf">Edit Beneficiary</string>
    <string name="lbl_acc_holder_nm">Name:</string>
    <string name="lbl_mob_no">Mobile No:</string>
    <string name="lbl_email">Email:</string>
    <string name="lbl_nickname">Nick Name:</string>
    <string name="lbl_fetchnm_btn">Fetch Name</string>
    <string name="lbl_submit_btn">Submit</string>
    <string name="lbl_acc_no">Account No :</string>
    <string name="lbl_fromacc_no">From Account No :</string>
    <string name="lbl_toacc_msg">To Account No :</string>
    <string name="lbl_frommob_no">From Mobile:</string>
    <string name="lbl_tomob_msg">To Mobile:</string>
    <string name="lbl_tommid_msg">To Virtual Account Number :</string>
    <string name="lbl_locate_us">Locate Us</string>
    <string name="alert_signledaylmt">Your Single Transaction Amount Limit Exceeds</string>
    <string name="lbl_home">Home</string>
    <string name="frmtitle_add_other_bnk_bnf">Add Beneficiary</string>
    <string name="frmtitle_edit_other_bnk_bnf">Edit Beneficiary</string>
    <string name="frmtitle_other_bank_fund_trans_ifsc">Other Bank Transfer(IFSC)</string>
    <string name="tabtitle_other_bank_fund_trans_ifsc">Fund Transfer P2A (Person To Account)</string>
    <string name="tabtitle_other_bank_fund_trans_imps">Fund Transfer P2P</string>
    <string name="frmtitle_other_bank_fund_trans_imps">Other Bank Transfer(IMPS)</string>
    <string name="tabtitle_other_bank_fund_trans_uid">Fund Transfer P2U</string>
    <string name="lbl_ifsc_code">IFSC Code:</string>
    <string name="lbl_lien_amt">Lien Amount:</string>
    <string name="lbl_bank">Bank:</string>
    <string name="lbl_branch">Branch:</string>
    <string name="lbl_loanDates">Dates</string>
    <string name="lbl_MMID">Virtual Account Number:</string>
    <string name="lbl_fetch_bnk_brn">Fetch Bank and Branch</string>
    <string name="frmtitle_rem_bnf">Remove Beneficiary</string>
    <string name="lbl_remove_btn">Remove</string>
    <string name="frmtitle_list_beneficiary">Beneficiary</string>
    <string name="lbl_acc_number">Account Number</string>
    <string name="lbl_nm_nicknm">Nickname</string>
    <string name="lbl_nm_nm">Name</string>
    <string name="lbl_same_bnk_trans">Same Bank Transfer</string>
    <string name="lbl_fd_acc">Open FD Account</string>
    <string name="lbl_debite_acc">Debit Account:</string>
    <string name="lbl_amount">Amount :</string>
    <string name="lbl_remark">Remarks :</string>
    <string name="lbl_get_balance">Get Balance</string>
    <string name="lbl__title_balance_rpt">Balance Report</string>
    <string name="lbl__account_type">Account Type:</string>
    <string name="lbl_scheme_and_acc_No">Scheme And Acc No:</string>
    <string name="lbl_scheme">Schemes</string>
    <string name="lbl_name">Name:</string>
    <string name="lbl_title_change_mobile_number">Change Mobile Number</string>
    <string name="lbl_old_mobile_no">Old Mobile No:</string>
    <string name="lbl_new_mobile_no">New Mobile No:</string>
    <string name="lbl_retype_mobile_no">Retype Mobile No:</string>
    <string name="lbl_change_btn">Change</string>
    <string name="lbl_title_change_mpin">Change MPIN</string>
    <string name="lbl_old_mpin">Old MPIN:</string>
    <string name="lbl_new_mpin">New MPIN:</string>
    <string name="lbl_retype_mpin">Retype MPIN:</string>
    <string name="lbl_title_cheque_status_query">Cheque Status Query</string>
    <string name="lbl_debit_rdo">Debit</string>
    <string name="lbl_credit_rdo">Credit</string>
    <string name="lbl_serial">Cheque Serial No.</string>
    <string name="lbl_from">From Cheque No.</string>
    <string name="lbl_to">To Cheque No.</string>
    <string name="lbl_chq_no">Cheque No:</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_get_status_btn">Get Status</string>
    <string name="lbl_title_cheque_status_report">Cheque Status Report</string>
    <string name="lbl_narration">Narration</string>
    <string name="cheque_no">Cheque No</string>
    <string name="lbl_debit_short">DR</string>
    <string name="lbl_credit_short">CR</string>
    <string name="lbl_title_cheque_book_request">Cheque Book Request</string>
    <string name="lbl_no_of_pages">No of Pages:</string>
    <string name="lbl_title_email_registration">Email Registration</string>
    <string name="lbl_currently">Current Status:</string>
    <string name="lbl_change">Change Status:</string>
    <string name="lbl_frequency">Frequency:</string>
    <string name="lbl_mpin">MPIN:</string>
    <string name="lbl_manage_beneficiary">Manage Beneficiary</string>
    <string name="lbl_transfer_funds">Transfer Funds</string>
    <string name="lbl_add_ben">Select Beneficiary </string>
    <string name="lbl_welcome_to">Welcome </string>
    <string name="lbl_ideal_mobile_banking">DNS Mobile Banking</string>
    <string name="lbl_customer_id">Customer Id :</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_login">Sign In</string>
    <string name="lbl_maturity_amnt">Maturity Amount</string>
    <string name="lbl_maturity_date">Maturity Date</string>
    <string name="lbl_interest_rate">Interest Rate</string>
    <string name="lbl_opening_amnt">Opening Amount</string>
    <string name="lbl_maturity_amnt_value">1,12,000 Rs</string>
    <string name="lbl_maturity_date_value">20-06-2016</string>
    <string name="lbl_interest_rate_value">10 %</string>
    <string name="lbl_opening_amnt_value">1,00,000 Rs</string>
    <string name="lbl_balance_eport">Balance Report :</string>
    <string name="lbl_account_type">Account Type :</string>
    <string name="lbl_clear_balance">Clear Balance (In Rs.):</string>
    <string name="lbl_unclear_balance">Unclear Balance (In Rs.):</string>
    <string name="lbl_show_details">Show Details</string>
    <string name="lbl_instl_amt">Installment Amount</string>
    <string name="lbl_instl_frq">Installment Frequency</string>
    <string name="lbl_get_custID">Get Customer Id</string>
    <string name="alert_000">Network Unavailable. Please Try Again.</string>
    <string name="alert_001">Please Enter Valid Account Number.</string>
    <string name="alert_002">Please Enter Valid Mobile Number.</string>
    <string name="alert_003">Please Enter Nickname.</string>
    <string name="alert_004">You Can Not Use Blank Spaces In Nickname.</string>
    <string name="alert_005">Please Enter Nickname With Minimum 4 And Maximum 15 characters.</string>
    <string name="alert_006">Please Enter Valid Mobile Number.</string>
    <string name="alert_007">Please Enter Valid E-mail Id.</string>
    <string name="alert_008">Invalid Account Number.</string>
    <string name="alert_009">This Beneficiary Is Already Added.</string>
    <string name="alert_010">Failed To Add Same Bank Beneficiary Due To Duplicate Account Number.</string>
    <string name="alert_011">Failed To Add Same Bank Beneficiary Due To Duplicate Nickname.</string>
    <string name="alert_012">Failed To Add Same Bank Beneficiary Due To Server Problem.</string>
    <string name="alert_013">Same Bank Beneficiary Added Successfully.</string>
    <string name="alert_014">Network Disconnected. Please Check Network Settings.</string>
    <string name="alert_015">Enter MPIN.</string>
    <string name="alert_016">Failed To Update Same Bank Beneficiary Due To Server Problem.</string>
    <string name="alert_017">Beneficiary Detail Updated Successfully.</string>
    <string name="alert_err">Error Occured</string>
    <string name="alert_018">Invalid IFSC Code.</string>
    <string name="alert_019">Failed To Add Other Bank Beneficiary Due To Duplicate Account Number.</string>
    <string name="alert_020">Failed To Add Other Bank Beneficiary Due To Duplicate Nickname.</string>
    <string name="alert_021">Failed To Add Other Bank Beneficiary Due To Server Problem.</string>
    <string name="alert_022">Other Bank Beneficiary Added Successfully.</string>
    <string name="alert_023">Please Enter IFSC Code.</string>
    <string name="alert_024">Please Enter Either IFSC Code Or Virtual Account Number.</string>
    <string name="alert_025">Please Enter 7-digits Virtual Account Number.</string>
    <string name="alert_026">Failed To Update Other Bank Beneficiary Due To Duplicate Account Number.</string>
    <string name="alert_027">Failed To Update Other Bank Beneficiary Due To Duplicate Nickname.</string>
    <string name="alert_028">Failed To Update Other Bank Beneficiary Due To Server Problem.</string>
    <string name="alert_028_1">Failed To Update Same Bank Beneficiary.</string>
    <string name="alert_029">Other Bank Beneficiary Updated Successfully.</string>
    <string name="alert_030">Fund Transfer Successful.</string>
    <string name="alert_031">Fund Transfer Amount Exceeds Limite.</string>
    <string name="alert_032">Fund Transfer Failed due to server problem.</string>
    <string name="alert_033">Please Enter Amount.</string>
    <string name="alert_034">Please Enter Amount Greater Than Zero</string>
    <string name="alert_035">Please Enter Remarks</string>
    <string name="alert_037">MPIN Must Be Of 6 Character</string>
    <string name="alert_040">Failed To Load Beneficiary Due To Server Problem.</string>
    <string name="alert_041">Beneficiary Not Available, Add Beneficiary.</string>
    <string name="alert_042">Beneficiary Removed Successfully.</string>
    <string name="alert_043">Transactions Exists For This Beneficiary,Can Not Delete.</string>
    <string name="alert_044">Please Fill All Fields!</string>
    <string name="lbl_mini_statement">Mini Statement</string>
    <string name="lbl_cheque_related">Cheque Related</string>
    <string name="lbl_fund_transfer">Fund Transfer</string>
    <string name="lbl_saving_and_current">Saving &amp; Current</string>
    <string name="lbl_deposits">Deposits</string>
    <string name="lbl_loan">Loan/Advances</string>
    <string name="lbl_from_msg">From :</string>
    <string name="lbl_to_msg">To :</string>
    <string name="lbl_confirm_msg">Please Confirm Below Details</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="lbl_charges">Charges (If Any) :</string>
    <string name="lbl_other_srvce">Other Services</string>
    <string name="lbl_tranid">Transaction Id:</string>
    <string name="lbl_Branch_Name">Branch Name</string>
    <string name="lbl_Branch_Address">Address</string>
    <string name="lbl_Branch_District">District</string>
    <string name="lbl_Branch_State">State</string>
    <string name="lbl_Branch_coNumber">Contact Number</string>
    <string name="lbl_Branch_Manager">Branch Manager</string>
    <string name="lbl_Branch_IFSC">IFSC</string>
</resources>